# ai-crewai-learning

./: .gitignore  README.md  pyproject.toml
src/: researcher.py  stock-analysis-simple-ollama.py  stock-analysis-simple.py
src/utils/: local-ollama-connection-test.py  openai-connection-test.py
